--- a/tps/tp_factor_graph/tp5.tex
+++ b/tps/tp_factor_graph/tp5.tex
@@ -226,7 +226,7 @@ Escriba una función para leer el archivo 3D \lstinline[style=bash]{parking-gara
 
 Para datos 3D, una pose en formato G2O es \lstinline[style=bash]{[VERTEX_SE3:QUAT i x y z qx qy qz qw]} donde \lstinline[style=bash]{(x,y,z)} representa la traslación y \lstinline[style=bash]{(qx,qy,qz,qw)} la rotación como un cuaternión. Una arista en formato G2O es \lstinline[style=bash]{[EDGE_SE3:QUAT i j x y z qx qy qz qw info(x, y, z, qx, qy, qz)]}, donde \lstinline[style=bash]{info(x, y, z, qx, qy, qz)} es un vector $1 \times 21$ de la matriz de información $6 \times 6$. Después de un proceso similar en la tarea~\ref{sec:read_g2o_2d}, se puede obtener la matriz de covarianza. Se pueden consultar los detalles en el repositorio de g2o\footnote{\url{https://github.com/RainerKuenmerle/g2o/wiki/File-Format-SLAM-3D}}.
 
-\textbf{Remark 7.} \textit{Tenga en cuenta que el cuaternión en MATLAB está en el orden de \lstinline[style=bash]{[qw qx qy qz]} y es diferente del orden en los archivos g2o que es \lstinline[style=bash]{[qx qy qz qw]}. Puede usar la función \lstinline[style=bash]{quat2rotm()} en matlab para construir una matriz de rotación a partir de cuaternión o usar la función \lstinline[style=bash]{quat2tform()} en matlab para construir una matriz de transformación.}
+\textbf{Remark 7.} \textit{Tenga en cuenta que el cuaternión en MATLAB está en el orden de \lstinline[style=bash]{[qw qx qy qz]} y es diferente del orden en los archivos g2o que es \lstinline[style=bash]{[qx qy qz qw]}. Puede usar la función \lstinline[style=bash]{quat2rotm()} en MATLAB para construir una matriz de rotación a partir de cuaternión o usar la función \lstinline[style=bash]{quat2tform()} en MATLAB para construir una matriz de transformación.}
 
 \subsection{Solución por Lotes (Batch Solution)}
 Cargue \lstinline[style=bash]{data/parking-garage.g2o} y construya un factor-graph 3D no lineal usando GTSAM. Utilice el solver de Gauss-Newton. Visualice y compare la trayectoria optimizada con la trayectoria inicial. Incluya un gráfico 3D o dos gráficos 2D en su pdf. Describir el proceso de construcción del grafo y sus parámetros.
